Falta pulir ciertas cosas.